--- a/css/global.scss
+++ b/css/global.scss
@@ -461,6 +461,10 @@ p.pre-head {
 .data {
   padding-top: 50px;
 }
+.recap {
+  padding-top: 60px;
+  padding-bottom: 0;
+}
 
 /* Schedule */
 .schedule {
@@ -597,8 +601,7 @@ p.pre-head {
 
 /* Who & FAQ */
 .who,
-.faq,
-.recap {
+.faq {
   padding: 110px 15px 0;
   @media (min-width: $tablet) {
     padding: 100px 30px 0;
@@ -630,8 +633,7 @@ p.pre-head {
   }
 }
 .who-text-outer,
-.faq-text-outer,
-.recap-text-outer {
+.faq-text-outer {
   @media (min-width: $tablet) {
     padding-left: 50px;
     padding-right: 50px;
@@ -646,8 +648,7 @@ p.pre-head {
   }
 }
 .who h1,
-.faq h1,
-.recap h1 {
+.faq h1 {
   padding-top: 50px;
   @media (min-width: $desktop) {
     width: 30%;
@@ -656,8 +657,7 @@ p.pre-head {
   }
 }
 .who-text,
-.faq-text,
-.recap-text {
+.faq-text {
   @media (min-width: $desktop) {
     margin-left: -75px;
     float: left;
@@ -671,8 +671,7 @@ p.pre-head {
 .faq {
   padding-bottom: 100px;
 }
-.faq-text,
-.recap-text {
+.faq-text {
   @media (min-width: $desktop) {
     margin-left: -75px;
   }
