Code of conduct tweaks

--- a/css/global.scss
+++ b/css/global.scss
@@ -378,6 +378,9 @@ p.pre-head {
     padding-bottom: 110px;
   }
 }
+p.bottom-pad {
+  padding-bottom: 50px;
+}
 .top-pad {
   padding-top: 30px;
 }
