--- a/css/global.scss
+++ b/css/global.scss
@@ -634,7 +634,7 @@ p.bottom-pad {
   }
 }
 .where-interior {
-  background: url("../img/where-interior2.jpg") no-repeat 40% top;
+  background: url("../img/where-interior2.jpg") no-repeat 40% center;
   background-size: auto 450px;
   display: block;
   width: 100%;
